--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,10 +4,7 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  release:
 
 jobs:
   build:
@@ -15,10 +12,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    #Java setup
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1.4.3
       with:
-        java-version: 1.8
+        java-version: 11 
+    # Cache maven dependencies
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+              ${{ runner.os }}-maven-  
+    # Step that runs the tests
     - name: Build with Maven
       run: mvn --file pom.xml clean compile
+   
