--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -39,4 +39,4 @@ jobs:
               ${{ runner.os }}-maven-  
     # Step that runs the tests
     - name: Build with Maven
-      run: mvn --file pom.xml $INPUT_MVNCOMMAND
+      run: printenv
