--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -38,34 +38,45 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-              ${{ runner.os }}-maven-  
+              ${{ runner.os }}-maven-
+    # Create settings.xml
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v14
+      with:
+          repositories: '[{ "id": "some-repository", "name": "some-repository-name", "url": "http://some.repository.url", "releases": { "enabled": "true" }, "snapshots": { "enabled": "false" } }]'
+          plugin_repositories: '[{ "id": "some-plugin-repository", "name": "some-plugin-repository-name", "url": "http://some.plugin.repository.url", "releases": { "enabled": "true" }, "snapshots": { "enabled": "false" }}]'
+          servers: '[{ "id": "some-server", "username": "some.user", "password": "some.password" }]'
+          mirrors: '[{ "id": "nexus", "mirrorOf": "!my-org-snapshots,*", "url": "http://redacted/nexus/content/groups/public" }]'
+          profiles: '[{ "id": "foo.profile", "name": "foo.profile", "url": "http://foo.bar.profile", "properties": { "foo": "property-1", "bar": "property-2"} }]'
+          plugin_groups: '[ "some.plugin.group.id", "some.other.plugin.group.id" ]'
     # Step that runs the tests
     - name: Build with Maven
-      run: 
-        mvn clean test
-        
-    - name: Get Allure history
-      uses: actions/checkout@v2
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+      run:
+        cat ~/.m2/settings.xml
+        #mvn clean test
 
-    - name: Allure Report action from marketplace
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      #id: allure-report
-      with:
-        allure_results: target/allure-results
-        #gh_pages: gh-pages
-        #allure_report: allure-report
-        allure_history: allure-history
-
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history    
+#    - name: Get Allure history
+#      uses: actions/checkout@v2
+#      if: always()
+#      continue-on-error: true
+#      with:
+#        ref: gh-pages
+#        path: gh-pages
+#
+#    - name: Allure Report action from marketplace
+#      uses: simple-elf/allure-report-action@master
+#      if: always()
+#      #id: allure-report
+#      with:
+#        allure_results: target/allure-results
+#        #gh_pages: gh-pages
+#        #allure_report: allure-report
+#        allure_history: allure-history
+#
+#    - name: Deploy report to Github Pages
+#      if: always()
+#      uses: peaceiris/actions-gh-pages@v2
+#      env:
+#        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        PUBLISH_BRANCH: gh-pages
+#        PUBLISH_DIR: allure-history
