--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -43,12 +43,42 @@ jobs:
     - name: maven-settings-xml-action
       uses: whelk-io/maven-settings-xml-action@v14
       with:
-          repositories: '[{ "id": "some-repository", "name": "some-repository-name", "url": "http://some.repository.url", "releases": { "enabled": "true" }, "snapshots": { "enabled": "false" } }]'
-          plugin_repositories: '[{ "id": "some-plugin-repository", "name": "some-plugin-repository-name", "url": "http://some.plugin.repository.url", "releases": { "enabled": "true" }, "snapshots": { "enabled": "false" }}]'
-          servers: '[{ "id": "some-server", "username": "some.user", "password": "some.password" }]'
-          mirrors: '[{ "id": "nexus", "mirrorOf": "!my-org-snapshots,*", "url": "http://redacted/nexus/content/groups/public" }]'
-          profiles: '[{ "id": "foo.profile", "name": "foo.profile", "url": "http://foo.bar.profile", "properties": { "foo": "property-1", "bar": "property-2"} }]'
-          plugin_groups: '[ "some.plugin.group.id", "some.other.plugin.group.id" ]'
+          repositories: '[
+                          { "id": "ptv-release",
+                            "name": "ptv-release",
+                            "url": "http://nexus.pluto.tv/repository/ptv-release/<",
+                            "releases": { "enabled": "true" },
+                            "snapshots": { "enabled": "false" }
+                          }
+                        ]'
+          plugin_repositories: '[
+                                  { "id": "ptv-release",
+                                    "name": "ptv-release",
+                                    "url": "http://nexus.pluto.tv/repository/ptv-release/",
+                                    "releases": { "enabled": "true" },
+                                    "snapshots": { "enabled": "false" }
+                                  }
+                                ]'
+          servers: '[
+                      { "id": "nexus",
+                        "username": "${{ secrets.NEXUS_USERNAME }}",
+                        "password": "${{ secrets.NEXUS_PASSWORD }}"
+                      }
+                    ]'
+          mirrors: '[
+                      { "id": "nexus",
+                        "mirrorOf": "*",
+                        "url": "http://nexus.pluto.tv/repository/maven-public/"
+                      }
+                    ]'
+          profiles: '[
+                      { "id": "foo.profile",
+                        "name": "foo.profile",
+                        "url": "http://foo.bar.profile",
+                        "properties": { "foo": "property-1", "bar": "property-2"}
+                      }
+                    ]'
+          plugin_groups: '[ "org.sonatype.plugins", "org.sonarsource.scanner.maven" ]'
     # Step that runs the tests
     - name: Build with Maven
       run:
