--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -38,34 +38,71 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-              ${{ runner.os }}-maven-  
+              ${{ runner.os }}-maven-
+    # Create settings.xml
+    - name: maven-settings-xml-action
+      uses: whelk-io/maven-settings-xml-action@v14
+      with:
+          repositories: '[
+                          { "id": "ptv-release",
+                            "name": "ptv-release",
+                            "url": "http://nexus.pluto.tv/repository/ptv-release/",
+                            "releases": { "enabled": "true" },
+                            "snapshots": { "enabled": "false" }
+                          }
+                        ]'
+          plugin_repositories: '[
+                                  { "id": "ptv-release",
+                                    "name": "ptv-release",
+                                    "url": "http://nexus.pluto.tv/repository/ptv-release/",
+                                    "releases": { "enabled": "true" },
+                                    "snapshots": { "enabled": "false" }
+                                  }
+                                ]'
+          servers: '[
+                      { "id": "github",
+                        "username": "${{ secrets.NEXUS_USERNAME }}",
+                        "password": "${{ secrets.NEXUS_PASSWORD }}"
+                      }
+                    ]'
+          mirrors: '[
+                      { "id": "github",
+                        "mirrorOf": "*",
+                        "url": "http://nexus.pluto.tv/repository/maven-public/"
+                      }
+                    ]'
+          plugin_groups: '[ "org.sonatype.plugins", "org.sonarsource.scanner.maven" ]'
     # Step that runs the tests
     - name: Build with Maven
-      run: 
-        mvn clean test
-        
-    - name: Get Allure history
-      uses: actions/checkout@v2
-      if: always()
-      continue-on-error: true
-      with:
-        ref: gh-pages
-        path: gh-pages
+      run: |
+        cat ~/.m2/settings.xml
+        echo "${{secrets.SSH_KEY}}" > ssh.txt
+        cat ssh.txt
+        echo "One last message"
+      #mvn clean test
 
-    - name: Allure Report action from marketplace
-      uses: simple-elf/allure-report-action@master
-      if: always()
-      #id: allure-report
-      with:
-        allure_results: target/allure-results
-        #gh_pages: gh-pages
-        #allure_report: allure-report
-        allure_history: allure-history
-
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history    
+#    - name: Get Allure history
+#      uses: actions/checkout@v2
+#      if: always()
+#      continue-on-error: true
+#      with:
+#        ref: gh-pages
+#        path: gh-pages
+#
+#    - name: Allure Report action from marketplace
+#      uses: simple-elf/allure-report-action@master
+#      if: always()
+#      #id: allure-report
+#      with:
+#        allure_results: target/allure-results
+#        #gh_pages: gh-pages
+#        #allure_report: allure-report
+#        allure_history: allure-history
+#
+#    - name: Deploy report to Github Pages
+#      if: always()
+#      uses: peaceiris/actions-gh-pages@v2
+#      env:
+#        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        PUBLISH_BRANCH: gh-pages
+#        PUBLISH_DIR: allure-history
